--- a/modules/core/src/com/company/gaef/app.properties
+++ b/modules/core/src/com/company/gaef/app.properties
@@ -25,3 +25,8 @@ cuba.anonymousSessionId = 424d8ec5-fc9f-a542-066a-78f992c03c4d
 cuba.webContextName = app-core
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
+cuba.dataSourceProvider=application
+cuba.dataSource.username=cuba
+cuba.dataSource.password=cuba
+cuba.dataSource.dbName=cuba
+cuba.dataSource.host=localhost
