--- a/modules/web/src/com/company/gaef/web-app.properties
+++ b/modules/web/src/com/company/gaef/web-app.properties
@@ -33,6 +33,7 @@ cuba.connectionUrlList = http://localhost:8080/app-core
 
 # Set to false if the middleware works on different JVM
 cuba.useLocalServiceInvocation = true
+cuba.web.theme = hover
 
 cuba.webContextName = app
 cuba.availableLocales = English|en
